# fvc-rs

./: Cargo.toml  README.md
docs/: TODO.md
src/extractor/: main.rs
src/lib/: extract.rs  fvc_hasher.rs  lib.rs  version_2.rs
src/lib/archive_tree/: mod.rs
src/lib/archive_tree/test_data/: foo_bar_zap.tar.zst
src/main/: main.rs
src/main/process/: extract.rs  mod.rs  process.rs  process_extract.rs
src/main/process/process_extract/: dag.rs  extract.rs  mod.rs
src/main/test_data/: ABC.tar.bz2  ABC.tar.zst  foo_bar_zap.tar.bz2  foo_bar_zap.tar.zst
