[package]
name = "file_verification_code"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
# license-file = "LICENSE.txt"
authors = ["Justin Yeo <justin.yeo@windriver.com"]
description = "A library used to calculate file verification codes used to identify file collections that may contain the same files but be packaged differently"
repository = "https://gitlab.aws-eu-north-1.devstar.cloud/WestStar/libraries/rust/file-verification-code"
publish = false

[dependencies]
clap = { version="4.2.7", features=["derive"]}
hex = "0.4.3"
hex-literal = "0.4.1"
libarchive = "0.1.1"
log = "0.4.17"
sha2 = "0.10.6"
stderrlog = "0.5.4"
tempdir = "0.3.7"
walkdir = "2.3.3"

[lib]
name = "file_verification_code"
path = "src/lib/lib.rs"

[[bin]]
name = "fvc"
path = "src/main/main.rs"
